[package]
name = "core-services"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backend = ["grpc-client", "grpc-server", "retry", "s3", "services", "smtp", "local-storage", "tokio"]
grpc-client = ["tonic/transport"]
grpc-server = ["tonic", "jsonwebtoken"]
host_machine = ["tokio/process", "tokio/fs", "tokio/io-std", "tokio-stream", "tokio"]
local-storage = ["tokio/fs", "tokio/io-std", "tokio/io-util", "zip", "jwalk", "rayon"]
zip = ["async_zip"]
retry = []
s3 = ["aws-sdk-s3", "schema", "tokio"]
services = []
smtp = ["lettre", "reqwest", "prost", "lettre/smtp-transport", "lettre/builder", "lettre/default", "schema"]
db-red = ["redb", "bincode"]
db-idb = ["idb", "wasm-bindgen", "serde-wasm-bindgen"]
wasm = ["web-sys", "js-sys", "wasm-logger", "wasm-bindgen", "wasm-bindgen-futures", "wasm-streams"]
wasm-logger = ["console_log", "console_error_panic_hook", "web-sys", "js-sys"]
token = ["jsonwebtoken"]
zstd = ["async_zip/zstd"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {  version = "1.0.117", features = ["indexmap", "preserve_order"]}
thiserror = "2.0.12"
async-trait = "0.1.88"
async-stream = "0.3.6"
futures-util.version = "0.3.31"
pretty_env_logger = { version = "0.5.0" }
log = "0.4.22"
schema = { path = "../schema/rust", default-features = false, optional = true }
lazy_static = "1.5.0"
anyhow = "1.0.98"
futures-timer = "3.0.3"
futures = "0.3.31"
validator = "0.20.0"
chrono = "0.4.39"
n0-future = "0.2.0"

# Optional dependencies based on features
tokio = { version = "1.46.1", default-features = false, features = ["rt", "sync"], optional = true }
jwalk = {version = "0.8.1", optional = true}
rayon = { version = "1.11.0", optional = true }
async_zip = { git = "https://github.com/Midwess/rs-async-zip.git", optional = true, features = ["chrono"] }
bincode = { version = "1.3.3", optional = true }
tokio-stream = { version = "0.1.16", default-features = false, optional = true }
tonic = { version = "0.13.1", optional = true }
prost = { version = "0.13.5", optional = true }
aws-sdk-s3 = { version = "1.41.0", optional = true }
lettre = { version = "0.11.7", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "hostname", "builder", "tokio1-native-tls"], optional = true }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"], optional = true }
reqwest = { version = "0.12.22", optional = true }
bytes = {  version = "1.10.1"}
redb = { version = "^3.0.0", optional = true }
idb = { version = "0.6.4", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-streams = { version = "0.4.2", optional = true }
parking_lot = "0.12.5"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.80", optional = true, features = ["XmlHttpRequest", "Window", "EventTarget", "ProgressEvent", "Document", "Blob", "AbortController", "Request", "RequestInit", "AbortSignal", "Response", "Headers", "XmlHttpRequestUpload", "Performance", "File", "FileSystemSyncAccessHandle", "FileSystemReadWriteOptions", "FileSystemHandle", "FileSystemFileHandle", "FileSystemDirectoryHandle", "StorageManager", "Navigator"]}
js-sys = { version = "0.3.80", optional = true }
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = { version = "0.4.53", optional = true }
wasm-bindgen = { version = "0.2.103", optional = true }