[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
schema = { path = "../schema/rust", features = ["server", "client"] }
core-services = { path = "../core-services", features = ["grpc-server", "host_machine", "services"] }
devlog-sdk = { path = "../devlog-sdk", features = ["gateway", "grpc-server"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "time", "sync"] }
sha1 = "0.10.6"
base64 = "0.22.1"
hmac = "0.12.1"
log = "0.4.27"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
prost = "0.13.5"
uuid = { version = "1.17.0", features = ["v4"] }
actix-web = "4.11.0"
thiserror = "2.0.16"
h3ron = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
geo-types = "0.7"
chrono = "0.4"
maxminddb = "0.24"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }