[package]
name = "wasm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 3
debug = true

[dependencies]
shared = { path = "../../shared" }
devlog-sdk = { path = "../../libs/devlog-sdk" }
crux_core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
n0-future = { workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
core-services = { workspace = true, features = ["db-idb", "wasm-logger"] }
serde_json = { workspace = true, features = ["indexmap", "preserve_order"] }
once_cell = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures-timer = { workspace = true, features = ["wasm-bindgen"] }
mime_guess = { workspace = true }
url = { workspace = true }
wasm-bindgen = { version = "0.2.101" }
tonic-web-wasm-client = "0.7.1"
serde-wasm-bindgen = { version = "0.6.5" }
idb = { version = "0.6.4" }
log = "0.4.28"
web-sys = { version = "0.3.78", features = ["File", "Blob", "BlobPropertyBag", "FileReader", "RequestMode", "RequestInit", "Headers", "Window", "Location", "ProgressEvent", "XmlHttpRequest", "XmlHttpRequestUpload", "AbortController", "Document", "Cache", "CacheStorage", "Request", "Response", "ResponseInit", "Navigator", "StorageManager", "Url", "FileSystemWritableFileStream", "FileSystemSyncAccessHandle", "FileSystemFileHandle", "FileSystemHandle", "FileSystemDirectoryHandle", "FileSystemWritableFileStream"] }
futures-channel = "0.3.31"
wasm-bindgen-futures = { version = "0.4.50" }
js-sys = "0.3.78"
async-broadcast = "0.7.2"
gloo = { version = "0.11.0", features = ["worker", "gloo-worker", "futures"] }
gloo-worker = "0.5.0"
uuid = { version = "1.18.0", features = ["v4"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false