[package]
name = "wasm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "wasm client for bitbridge"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true

[dependencies]
shared = { path = "../../shared" }
devlog-sdk = { path = "../../libs/devlog-sdk" }
schema = { path = "../../libs/schema/rust" }
crux_core = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3.6"
thiserror = { workspace = true }
n0-future = { workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
core-services = { workspace = true, features = ["db-idb", "wasm", "zip"] }
serde_json = { workspace = true, features = ["indexmap", "preserve_order"] }
once_cell = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures-timer = { workspace = true, features = ["wasm-bindgen"] }
mime_guess = { workspace = true }
url = { workspace = true }
wasm-bindgen = { version = "0.2.104" }
tonic-web-wasm-client = "0.7.1"
serde-wasm-bindgen = { version = "0.6.5" }
idb = { version = "0.6.4" }
log = "0.4.28"
web-sys = { version = "0.3.81", features = ["File", "Blob", "BlobPropertyBag", "FileReader", "RequestMode", "RequestInit", "Headers", "Window", "Location", "ProgressEvent", "XmlHttpRequest", "XmlHttpRequestUpload", "AbortController", "Document", "Cache", "CacheStorage", "Request", "Response", "ResponseInit", "Navigator", "StorageManager", "Url", "FileSystemWritableFileStream", "FileSystemSyncAccessHandle", "FileSystemFileHandle", "FileSystemHandle", "FileSystemDirectoryHandle", "FileSystemGetDirectoryOptions", "FileSystemGetFileOptions", "FileSystemReadWriteOptions"] }
futures-channel = "0.3.31"
wasm-bindgen-futures = { version = "0.4.54" }
js-sys = "0.3.81"
gloo-worker = "0.5.0"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--dce",
    "--vacuum"
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
