[package]
name = "worker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
wasm = { path = "../wasm" }
gloo-worker = { version = "0.5", features = [ "futures" ] }
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
