[package]
name = "schema"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindgen = ["uniffi", "uniffi/bindgen"]
server = ["tonic/transport"]
client = []

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
chrono = "0.4.39"
regex = { version = "1.11.1" }
thiserror = { version = "2.0.12" }
prost = {version = "0.13.5", default-features = false, features = ["default"]}
tonic = { version = "0.13.1", default-features = false, features = ["codegen", "prost"] }

uniffi = { version = "0.29.3", optional = true }

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"], default-features = false}
